--- a/package.json
+++ b/package.json
@@ -462,17 +462,17 @@
 		"onCommand:extension.node-debug2.toggleSkippingFile"
 	],
 	"dependencies": {
-		"minimatch": "^3.0.4"
+		"minimatch": "9.0.4"
 	},
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
-		"@types/minimatch": "^3.0.3",
-		"@types/node": "^12.0.0",
-		"del": "^2.2.2",
-		"event-stream": "^3.3.4",
-		"find-free-port": "^1.0.2",
-		"minimist": "^1.2.5"
+		"@types/minimatch": "5.1.2",
+		"@types/node": "20.12.7",
+		"del": "7.1.0",
+		"event-stream": "4.0.1",
+		"find-free-port": "2.0.0",
+		"minimist": "1.2.8"
 	},
 	"publishConfig": {
 		"access": "public"
