--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-	"activationEvents": [
-		"onDebug:legacy-extensionHost",
-		"onDebugResolve:legacy-extensionHost",
-		"onCommand:extension.node-debug2.toggleSkippingFile"
+	"name": "node-debug2",
+	"displayName": "[Deprecated] Node Debug",
+	"version": "0.0.1",
+	"private": false,
+	"description": "%extension.description%",
+	"keywords": [
+		"land"
 	],
-	"author": {
-		"email": "Land@PlayForm.Cloud",
-		"name": "🌆 — Land —",
-		"url": "HTTPS://Land.PlayForm.Cloud"
-	},
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandNodeDebug2#readme",
 	"bugs": {
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandNodeDebug2/issues"
 	},
-	"capabilities": {
-		"untrustedWorkspaces": {
-			"description": "%workspaceTrust%",
-			"supported": "limited"
-		},
-		"virtualWorkspaces": false
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/LandNodeDebug2.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🌆 — Land —",
+		"email": "Land@PlayForm.Cloud",
+		"url": "HTTPS://Land.PlayForm.Cloud"
+	},
+	"type": "module",
+	"main": "./out/src/extension",
+	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
+		"build": "gulp build",
+		"minor": "npm version minor -m '%s'",
+		"patch": "npm version patch -m '%s'",
+		"prepublishOnly": "Build 'Source/**/*.ts'",
+		"publish": "gulp publish"
 	},
 	"contributes": {
 		"breakpoints": [
@@ -444,10 +456,14 @@
 			]
 		}
 	},
+	"activationEvents": [
+		"onDebug:legacy-extensionHost",
+		"onDebugResolve:legacy-extensionHost",
+		"onCommand:extension.node-debug2.toggleSkippingFile"
+	],
 	"dependencies": {
 		"minimatch": "9.0.4"
 	},
-	"description": "%extension.description%",
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
@@ -458,31 +474,15 @@
 		"find-free-port": "2.0.0",
 		"minimist": "1.2.8"
 	},
-	"displayName": "[Deprecated] Node Debug",
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandNodeDebug2#readme",
-	"icon": "images/node-debug-icon.png",
-	"keywords": [
-		"land"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"main": "./out/src/extension",
-	"name": "node-debug2",
-	"private": false,
 	"publishConfig": {
 		"access": "public"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/LandNodeDebug2.git"
-	},
-	"scripts": {
-		"Document": "Document 'Source/**/*.ts'",
-		"build": "gulp build",
-		"minor": "npm version minor -m '%s'",
-		"patch": "npm version patch -m '%s'",
-		"prepublishOnly": "Build 'Source/**/*.ts'",
-		"publish": "gulp publish"
-	},
-	"type": "module",
-	"version": "0.0.1"
+	"icon": "images/node-debug-icon.png",
+	"capabilities": {
+		"untrustedWorkspaces": {
+			"description": "%workspaceTrust%",
+			"supported": "limited"
+		},
+		"virtualWorkspaces": false
+	}
 }
