--- a/package.json
+++ b/package.json
@@ -440,15 +440,15 @@
 		"onCommand:extension.node-debug2.toggleSkippingFile"
 	],
 	"dependencies": {
-		"minimatch": "^3.0.4"
+		"minimatch": "3.0.4"
 	},
 	"devDependencies": {
-		"@types/minimatch": "^3.0.3",
-		"@types/node": "^12.0.0",
-		"del": "^2.2.2",
-		"event-stream": "^3.3.4",
-		"find-free-port": "^1.0.2",
-		"minimist": "^1.2.5"
+		"@types/minimatch": "3.0.3",
+		"@types/node": "12.0.0",
+		"del": "2.2.2",
+		"event-stream": "3.3.4",
+		"find-free-port": "1.0.2",
+		"minimist": "1.2.5"
 	},
 	"icon": "images/node-debug-icon.png",
 	"capabilities": {
