--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "minimatch": "^3.0.4",
-    "vscode-chrome-debug-core": "^6.8.11",
-    "vscode-debugadapter": "^1.40.0",
-    "vscode-nls": "^4.0.0"
+    "minimatch": "9.0.4",
+    "vscode-chrome-debug-core": "6.8.11",
+    "vscode-debugadapter": "1.40.0",
+    "vscode-nls": "5.2.0"
   },
   "devDependencies": {
-    "@types/minimatch": "^3.0.3",
-    "@types/mocha": "^2.2.47",
-    "@types/node": "^12.0.0",
-    "@types/vscode": "^1.45.1",
-    "del": "^2.2.2",
-    "event-stream": "^3.3.4",
-    "find-free-port": "^1.0.2",
-    "gulp": "^5.0.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-tslint": "^8.1.4",
-    "gulp-typescript": "^5.0.0",
-    "gulp-util": "^3.0.5",
-    "minimist": "^1.2.5",
-    "mocha": "^7.1.2",
-    "tslint": "^5.7.0",
-    "typescript": "^3.9.3",
-    "vsce": "^1.95.1",
-    "vscode-chrome-debug-core-testsupport": "^4.0.0",
-    "vscode-debugadapter-testsupport": "^1.25.0",
-    "vscode-debugprotocol": "^1.37.0",
-    "vscode-nls-dev": "^3.3.1"
+    "@types/minimatch": "5.1.2",
+    "@types/mocha": "10.0.6",
+    "@types/node": "20.14.5",
+    "@types/vscode": "1.90.0",
+    "del": "7.1.0",
+    "event-stream": "4.0.1",
+    "find-free-port": "2.0.0",
+    "gulp": "5.0.0",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-tslint": "8.1.4",
+    "gulp-typescript": "5.0.1",
+    "gulp-util": "3.0.5",
+    "minimist": "1.2.8",
+    "mocha": "10.4.0",
+    "tslint": "5.20.1",
+    "typescript": "5.4.5",
+    "vsce": "1.95.1",
+    "vscode-chrome-debug-core-testsupport": "4.1.1",
+    "vscode-debugadapter-testsupport": "1.25.0",
+    "vscode-debugprotocol": "1.37.0",
+    "vscode-nls-dev": "4.0.4"
   },
   "main": "./out/src/extension",
   "activationEvents": [
@@ -67,7 +67,7 @@
     "package": "gulp package"
   },
   "engines": {
-    "vscode": "^1.60.0-insider",
+    "vscode": "1.60.0-insider",
     "node": ">=10"
   },
   "repository": {
