--- a/package.json
+++ b/package.json
@@ -437,16 +437,16 @@
 		}
 	},
 	"dependencies": {
-		"minimatch": "^3.0.4"
+		"minimatch": "3.0.4"
 	},
 	"description": "%extension.description%",
 	"devDependencies": {
-		"@types/minimatch": "^3.0.3",
-		"@types/node": "^12.0.0",
-		"del": "^2.2.2",
-		"event-stream": "^3.3.4",
-		"find-free-port": "^1.0.2",
-		"minimist": "^1.2.5"
+		"@types/minimatch": "3.0.3",
+		"@types/node": "12.0.0",
+		"del": "2.2.2",
+		"event-stream": "3.3.4",
+		"find-free-port": "1.0.2",
+		"minimist": "1.2.5"
 	},
 	"displayName": "[Deprecated] Node Debug",
 	"icon": "images/node-debug-icon.png",
