--- a/package.json
+++ b/package.json
@@ -437,16 +437,16 @@
 		}
 	},
 	"dependencies": {
-		"minimatch": "^10.0.1"
+		"minimatch": "10.0.1"
 	},
 	"description": "%extension.description%",
 	"devDependencies": {
-		"@types/minimatch": "^5.1.2",
-		"@types/node": "^22.7.5",
-		"del": "^8.0.0",
-		"event-stream": "^4.0.1",
-		"find-free-port": "^2.0.0",
-		"minimist": "^1.2.8"
+		"@types/minimatch": "5.1.2",
+		"@types/node": "22.7.5",
+		"del": "8.0.0",
+		"event-stream": "4.0.1",
+		"find-free-port": "2.0.0",
+		"minimist": "1.2.8"
 	},
 	"displayName": "[Deprecated] Node Debug",
 	"icon": "images/node-debug-icon.png",
